--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 
 	<p id="botao">
-		<button type="button" onclick="luz(1)" style= "width="10" height="10"">Acender</button>
+		<button type="button" onclick="luz(1)" style= "margin="10" padding="10"">Acender</button>
 		<button type="button" onclick="luz(0)">Apagar</button>
 
 	</p>
