--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 	<img id="lampEscolhida" src="lampadaApagada.png" width="200" height="360">
 </div>
 
-	<p id="botao" style="width=50;height=50">
+	<p id="botao">
 		<button type="button" onclick="luz(1)">Acender</button>
 		<button type="button" onclick="luz(0)">Apagar</button>
-
 	</p>
 </body>
 </html>
